# agentic-career-aligner

./: .env.example  .gitignore  LICENSE  LINKEDIN.md  README.md  pyproject.toml  run.bat  run.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
src/job_matcher/: __init__.py  main.py
src/job_matcher/api/: deps.py
src/job_matcher/api/routes/: health.py  match.py
src/job_matcher/core/: config.py  exceptions.py
src/job_matcher/core/models/: document.py  match_result.py
src/job_matcher/core/pipeline/: match_pipeline.py
src/job_matcher/core/schemas/: match.py
src/job_matcher/integrations/freeapi/: client.py
src/job_matcher/integrations/openai/: chat.py  client.py  embeddings.py  errors.py
src/job_matcher/services/analysis/: gap_analyzer.py  text_analyzer.py
src/job_matcher/services/comparison/: base.py  cosine_similarity.py  llm_comparator.py  local_comparator.py
src/job_matcher/services/embedding/: base.py  local_embedder.py  openai_embedder.py
src/job_matcher/services/feedback/: feedback_formatter.py  resume_suggestions.py
src/job_matcher/services/pdf/: base.py  pymupdf_parser.py  text_cleaner.py
src/job_matcher/services/scoring/: match_scorer.py
src/job_matcher/services/skills/: skill_extractor.py
src/job_matcher/static/: index.html
src/job_matcher/utils/: chunking.py  file_io.py  text_document.py
tests/: test_api.py  test_feedback_formatter.py  test_gap_analyzer.py
