[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "job-matcher"
version = "0.1.0"
description = "PDF-based resume and job description semantic matching with OpenAI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.9",
    "pymupdf>=1.24.0",
    "openai>=1.0.0",
    "numpy>=1.26.0",
    "tenacity>=8.2.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[project.scripts]
job-matcher = "job_matcher.main:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
job_matcher = ["static/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
