[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "career-aligner"
version = "1.0.0"
description = "AI career agent — CV vs job gap analysis with FastAPI. Free local mode + optional OpenAI."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Vamshi Krishna Bandari" }]
keywords = ["resume", "cv", "job-matching", "career", "fastapi", "open-source", "free"]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.9",
    "pymupdf>=1.24.0",
    "openai>=1.0.0",
    "numpy>=1.26.0",
    "tenacity>=8.2.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/VamshiKrishnaBandari07/agentic-career-aligner"
Repository = "https://github.com/VamshiKrishnaBandari07/agentic-career-aligner"
Issues = "https://github.com/VamshiKrishnaBandari07/agentic-career-aligner/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[project.scripts]
job-matcher = "job_matcher.main:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
job_matcher = ["static/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
